<resources>
    <string name="app_name">ভিটামিনসমুহ</string>
    //Name of vitamins
    <string name="vitamin">ভিটামিন</string>
    <string name="vitamin_a">ভিটামিন-এ</string>
    <string name="vitamin_b">ভিটামিন-বি</string>
    <string name="vitamin_c">ভিটামিন-সি</string>
    <string name="vitamin_d">ভিটামিন-ডি</string>
    <string name="vitamin_e">ভিটামিন-ই</string>
    <string name="vitamin_k">ভিটামিন-কে</string>

    <string name="vitamin_work">কাজ</string>
    <string name="vitamin_necessary">প্রয়োজন</string>
    <string name="vitamin_tips">টিপস</string>


    // function description
    <string name="vitamin_home">ভিটামিন হলো খাদ্যের একটি অত্যাবশ্যকীয় জৈব রাসায়নিক উপাদান, যা শরীরের ভেতরে তৈরি হয় না এবং অবশ্যই খাবার থেকে গ্রহণ করতে হয়। আমাদের ধারণা, ভিটামিন শরীরে শক্তি জোগায়, ভিটামিন খেলে দুর্বলতা কমবে বা খারাপ স্বাস্থ্য ভালো হবে। আসলে ধারণাটা ঠিক নয়। ভিটামিন থেকে শরীরে সরাসরি কোনো শক্তি উৎপন্ন হয় না। তবে বিভিন্ন প্রকার খাদ্য, যেমন শর্করা, আমিষ ও স্নেহজাতীয় খাবারের বিপাক-প্রক্রিয়ায় ভিটামিন অংশ নেয়। ফলে দেহে কোনো একটি ভিটামিনের অভাব হলে সেই নির্দিষ্ট উপাদানের কার্যক্রম বাধাগ্রস্ত হয়। জৈব রাসায়নিক বৈশিষ্ট্যের ভিত্তিতে ভিটামিনকে সাধারণত জলে ও চর্বিতে দ্রবণীয় এই দুই ভাগে ভাগ করা যায়। চর্বিতে দ্রবণীয় ভিটামিন হচ্ছে এ, ডি, ই, কে। জলে দ্রবণীয় ভিটামিন বি এবং সি।</string>

    <string name="vitamin_des_a">গাজর, টক জাতীয় ফল, চীজ, শাকসবজি, পার্সলে, দুধ ,মাছ ও ডিমে ভিটামিন এ পাওয়া  যায়।</string>
    <string name="vitamin_des_b">ভিটামিন বি আসলে অনেক গুলো বি ভিটামিনের সমন্বয়, যাকে আমরা ভিটামিন বি কমপ্লেক্স বলতে পারি। বি গুলো হচ্ছে বি১, বি২, বি৩,বি৪, বি৬, বি৭, বি৯,বি১২। এগুলো সবই বি ভিটামিনের মধ্যে পড়ে। মানবদেহের অত্যন্ত জরুরী কিছু ফাংশন নিয়ন্ত্রণে ভিটামিন বি গুরুত্বপূর্ণ। দেহের অত্যাবশ্যকীয় উপাদান এই বি ভিটামিন। প্রতিদিনই আমাদের এই ভিটামিন বি এর প্রয়োজন। যা আমরা পেয়ে থাকি আমাদের খাদ্য তালিকার বিভিন্ন খাবার থেকে।</string>
    <string name="vitamin_des_c">ভিটামিন সি সমস্ত সাইট্রাস ফল,লেবু, ব্রোকলি, টক জাতীয় ফল এবং সবুজ মরিচের মধ্যে পাওয়া যায়। এটা সাধারণ-ঠান্ডা প্রতিরোধ করতে পারে । এক গবেষণায় দেখা গেছে যে ভিটামিন সি নিয়মিতভাবে খেলে দিনে ঠান্ডার পরিমাণ কমে যায়।</string>
    <string name="vitamin_des_d">ভিটামিন ডি,  শরীরের ক্যালসিয়াম শোষণ করতে সাহায্য করে এবং হাড়ের ভাল স্বাস্থ্যের জন্য প্রয়োজনীয়। এটি সূর্যের আলোর মাধ্যমে বেশিরভাগই অ্যাক্সেস করা যায় এবং কিছু ফ্যাটি মাছ বা ঘন দুধ থেকে পাওয়া যায়। ভিটামিন ডি খুব সামান্য অস্টিওপরোসিসে অবদান রাখতে পারে। কিছু রিপোর্ট দেখায় যে ভিটামিন ডি নির্দিষ্ট ক্যান্সার প্রতিরোধ করতে পারে, তবে সুবিধার পাশাপাশি  অন্যান্য গবেষণায় প্যানক্যাটিসিক ক্যান্সারের ঝুঁকির কারন হিসাবে ভিটামিন ডি যোগ করা হয়েছে।</string>
    <string name="vitamin_des_e">ভিটামিন ই একটি গুরুত্বপূর্ণ অ্যান্টিঅক্সিডেন্ট যা কোষের সুরক্ষায় ভূমিকা পালন করে, আপনার ইমিউন সিস্টেমকে শক্তিশালী করে, এবং ম্যাকুলার ডিপেন্ডার হ্রাস করতে সাহায্য করতে পারে। এটা গম এবং সূর্যমুখী বীজ জাতীয় খাবার থেকে পাওয়া যায়। গবেষকরা মনে করেন এই অ্যান্টিঅক্সিডেন্ট হার্ট  এর সুরক্ষা করতে পারে, তবে নতুন গবেষনা পাওয়া যায় যে, এটি ক্যান্সার বা হৃদরোগ বা স্ট্রোকের ঝুঁকি খুবই সামান্য প্রতিরোধ করতে পারে এবং অতিরিক্ত ভিটামিন ই মস্তিষ্কের রক্তক্ষরণের ঝুঁকি বৃদ্ধি করতে পারে।</string>
    <string name="vitamin_des_k">স্পিনাচ, নেটেল, ফুলকপি, গাজর, টমেটো, সবুজ চা তে ভিটামিন এ পাওয়া  যায়।</string>


    // each vitamin work
    <string name="vitamin_work_a">যৌবন ধরে রাখে, চুল ও নখের সৌন্দর্য্যে, প্রখর দৃষ্টিশক্তি এবং হাঁড়ের গঠনে।</string>
    <string name="vitamin_work_b">ওজন নিয়ন্ত্রণে, সুস্থতা প্রদানে, আমাদের কর্ণ, স্মৃতি ও পাকস্থলি সুস্থ রাখতে কার্যকরী।</string>
    <string name="vitamin_work_c">ত্বক মসৃন করে, রোগপ্রতিরোধ ক্ষমতা বাড়ায়, মন ভালো রাখে, সুস্থ চুল এবং নখ সুন্দর করে।</string>
    <string name="vitamin_work_d">হাড় সুস্থ, রক্তচলাচল, রোগ প্রতিরোধ ক্ষমতা, টক্সিন দূর করে।</string>
    <string name="vitamin_work_e">অপারেশনের পর শরীর সুস্থ রাখতে, রিপ্রোডাক্টিভ সিস্টেম ও পরিবেশ হতে রক্ষা করে।</string>
    <string name="vitamin_work_k">কাটাছেড়া শুকাতে, রক্ত জমাট বাঁধতে।</string>

    //tips
    <string name="tips_c">আপনার খাদ্যের মাধ্যমে ভিটামিন সি পান করার চেষ্টা করুন। এটি সাপ্লিমেন্ট হিসেবে নেয়াও ভাল গ্রহণ বিশেষ করে যদি আপনি যদি ধূমপায়ী হন অথবা অধূমপায়ী যারা প্রায়ই পরোক্ষ ধোঁয়া পান তাদের কাশির জন্য ভিটামিন সি ভাল।</string>
    <string name="tips_d">আপনার  ভিটামিন ডি পাওয়ার জন্য খুব সামান্য সূর্যের আলোর প্রয়োজন হয় এবং কিছু খাবারও এর সাথে যোগ করতে পারেন।  যার মানে অধিকাংশ লোকই যথেষ্ট পরিমাণে ভিটামিন ডি পান। অতিরিক্ত সূর্যের এক্সপোজার না থাকলে, ৫০ বছরের বেশি বয়সী বা কালো ত্বকের কেউ ডাক্তারের সাথে কথা বলে সাপ্লিমেন্ট নিতে পারেন।</string>
    <string name="tips_e">খাবার যেমন সিফ্লাওয়ার, চিনাবাদাম, ডিম, গরুর মাংস, ফল এবং সবুজ, শাক সবজি থেকে আপনার ভিটামিন ই নিন এবং সাপ্লিমেন্ট থেকে দূরে থাকুন।</string>
    <string name="tips_k"></string>


    // necessary amount of vitamin
    <string name="nes_va">প্রতিদিন আমাদের প্রয়োজন: ০.৪ -০১ মিলিগ্রাম</string>
    <string name="nes_vb">প্রতিদিন আমাদের প্রয়োজন: ১.৩-২  মিলিগ্রাম</string>
    <string name="nes_vc">প্রতিদিন আমাদের প্রয়োজন: ৭ মিলিগ্রাম</string>
    <string name="nes_vd">প্রতিদিন আমাদের প্রয়োজন: ২-৫ মিলিগ্রাম</string>
    <string name="nes_ve">প্রতিদিন আমাদের প্রয়োজন: ১.৬-২  মিলিগ্রাম</string>
    <string name="nes_vk">প্রতিদিন আমাদের প্রয়োজন: ১-২ মিলিগ্রাম</string>


</resources>
