<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VitaminFunctione">

    <TextView
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vitamin_e"
        android:paddingVertical="10dp"
        android:textSize="30dp"
        android:textAlignment="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/v1"
        android:padding="10dp"
        android:background="#00897B">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dsecription_bg"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vitamin_des_e"
                    android:textSize="20dp"
                    android:textColor="@color/white_color"
                    android:textAlignment="center"
                    android:padding="5dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vitamin_work"
                    android:textSize="20dp"
                    android:textAllCaps="false"
                    android:textAlignment="center"
                    android:background="@color/ic_launcher_background"
                    android:textColor="@color/white_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/vitamin_work_e"
                    android:textAlignment="center"
                    android:textSize="25dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vitamin_necessary"
                    android:layout_marginTop="10dp"
                    android:textSize="20dp"
                    android:textAllCaps="false"
                    android:textAlignment="center"
                    android:background="@color/ic_launcher_background"
                    android:textColor="@color/white_color" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/nes_ve"
                    android:layout_marginTop="8dp"
                    android:padding="5dp"
                    android:textSize="25dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vitamin_tips"
                    android:layout_marginTop="10dp"
                    android:textSize="20dp"
                    android:textAllCaps="false"
                    android:textAlignment="center"
                    android:background="@color/ic_launcher_background"
                    android:textColor="@color/white_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/tips_e"
                    android:layout_marginTop="8dp"
                    android:padding="5dp"
                    android:textSize="25dp" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>

</RelativeLayout>