<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:background="@mipmap/icon_my"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/vitaminintro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/button_bg"
                android:paddingVertical="10dp"
                android:text="@string/vitamin"
                android:textAlignment="center"
                android:textColor="@color/white_color"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/vitamina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vitaminintro"
                android:layout_marginTop="10dp"
                android:background="@color/button_bg"
                android:text="@string/vitamin_a"
                android:textColor="@color/white_color"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage"
                tools:targetApi="o" />

            <Button
                android:id="@+id/vitaminb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vitamina"
                android:layout_marginTop="10dp"
                android:background="@color/button_bg"
                android:text="@string/vitamin_b"
                android:textColor="@color/white_color"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage"
                tools:targetApi="o" />

            <Button
                android:id="@+id/vitaminc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vitaminb"
                android:layout_marginTop="10dp"
                android:background="@color/button_bg"
                android:text="@string/vitamin_c"
                android:textColor="@color/white_color"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage"
                tools:targetApi="o" />

            <Button
                android:id="@+id/vitamind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vitaminc"
                android:layout_marginTop="10dp"
                android:layout_centerVertical="true"
                android:background="@color/button_bg"
                android:text="@string/vitamin_d"
                android:textColor="@color/white_color"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage"
                tools:targetApi="o" />

            <Button
                android:id="@+id/vitamine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vitamind"
                android:layout_marginTop="10dp"
                android:background="@color/button_bg"
                android:text="@string/vitamin_e"
                android:textColor="@color/white_color"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage"
                tools:targetApi="o" />

            <Button
                android:id="@+id/vitamink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vitamine"
                android:layout_marginTop="10dp"
                android:background="@color/button_bg"
                android:text="@string/vitamin_k"
                android:textColor="@color/white_color"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage"
                tools:targetApi="o" />

            <Button
                android:id="@+id/developer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/vitamink"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="46dp"
                android:background="@color/button_bg"
                android:text="Developed By"
                android:textAllCaps="false"
                android:textColor="@color/white_color"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="SpUsage"
                tools:targetApi="o" />
        </RelativeLayout>
    </ScrollView>





</RelativeLayout>